Further Component improvements, cleanup